--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -30,6 +30,7 @@ petgraph-gen = "0.1.3"
 num = "0.4.0"
 tinyset = "0.4.10"
 egui_json_tree = "0.6.0"
+egui_flex = "0.1.1"
 
 dashmap = "5.5.3"
 anyhow.workspace = true
@@ -57,6 +58,7 @@ regex = "1.10.4"
 bevy_framepace = "0.17.1"
 #bevy_assets_bundler = "0.6.0"
 lazy_static = "1.5.0"
+log = "0.4.20"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 arboard = { version = "3.2.0", optional = true }
