--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -12,6 +12,8 @@ description = "Visual debugger for Chidori"
 locked = true
 
 [dependencies]
+#chidori-core = { path = "../chidori-core", version = "0.2.5"   }
+chidori-core = { version = "0.2.5"   }
 objc = "0.2"
 winit = "=0.29.15"
 bevy = "0.13.2"
@@ -43,7 +45,6 @@ futures.workspace = true
 petgraph.workspace = true
 
 syntect = "5.2.0"
-chidori-core = { path = "../chidori-core", version = "0.2.5"   }
 dirs = "5.0.1"
 target-lexicon = "0.12.14"
 rusqlite.workspace = true
@@ -67,7 +68,6 @@ thread_local = { version = "1.1.0", optional = true }
 [build-dependencies]
 target-lexicon = "0.12"
 dirs = "3.0"
-pyo3-build-config = "0.19.1"
 #bevy_assets_bundler = "0.6.0"
 lazy_static = "1.5.0"
 
