--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -12,8 +12,17 @@ description = "Visual debugger for Chidori"
 locked = true
 
 [dependencies]
-#chidori-core = { path = "../chidori-core", version = "0.2.5"   }
-chidori-core = { version = "0.2.5"   }
+#chidori-core = { path = "../chidori-core", version = "0.2.6"   }
+chidori-core = { path = "../chidori-core"}
+anyhow.workspace = true
+serde.workspace = true
+serde_json = "=1.0.128"
+uuid.workspace = true
+serde_derive.workspace = true
+tokio.workspace = true
+futures.workspace = true
+petgraph.workspace = true
+rusqlite.workspace = true
 objc = "0.2"
 winit = "=0.29.15"
 bevy = "0.13.2"
@@ -35,24 +44,15 @@ egui_json_tree = "0.6.0"
 egui_flex = "0.1.1"
 
 dashmap = "5.5.3"
-anyhow.workspace = true
-serde.workspace = true
-serde_json = "=1.0.128"
-uuid.workspace = true
-serde_derive.workspace = true
-tokio.workspace = true
-futures.workspace = true
-petgraph.workspace = true
 
 syntect = "5.2.0"
 dirs = "5.0.1"
 target-lexicon = "0.12.14"
-rusqlite.workspace = true
 notify-debouncer-full = "0.3.1"
 once_cell = "1.19.0"
 crossbeam-channel = "0.5.12"
-wasm-bindgen = "0.2.92"
-wasm-bindgen-futures = "0.4.42"
+#wasm-bindgen = "0.2.92"
+#wasm-bindgen-futures = "0.4.42"
 webbrowser = { version = "0.8.2", optional = true }
 serde_yaml = "0.8.26"
 regex = "1.10.4"
@@ -65,11 +65,12 @@ log = "0.4.20"
 arboard = { version = "3.2.0", optional = true }
 thread_local = { version = "1.1.0", optional = true }
 
-[build-dependencies]
-target-lexicon = "0.12"
-dirs = "3.0"
-#bevy_assets_bundler = "0.6.0"
-lazy_static = "1.5.0"
+#[build-dependencies]
+#target-lexicon = "0.12"
+#dirs = "3.0"
+##bevy_assets_bundler = "0.6.0"
+#lazy_static = "1.5.0"
+##pyo3-build-config = "0.22.5"
 
 
 # https://github.com/mvlabat/bevy_egui/blob/main/Cargo.toml
