--- a/toolchain/chidori-debugger/Cargo.toml
+++ b/toolchain/chidori-debugger/Cargo.toml
@@ -12,8 +12,7 @@ description = "Visual debugger for Chidori"
 locked = true
 
 [dependencies]
-#chidori-core = { path = "../chidori-core", version = "0.2.6"   }
-chidori-core = { path = "../chidori-core"}
+chidori-core = { path = "../chidori-core", version = "0.2.7"   }
 anyhow.workspace = true
 serde.workspace = true
 serde_json = "=1.0.128"
